--- a/index.html
+++ b/index.html
@@ -6,14 +6,42 @@
   <liink rel="icon" type="image/x-icon" href="favicon.png">
     <meta charset="ut-8">
     <meta name="viewport" content="width=device-widtth,initial-scale=1.0">
+    <link rel="stylesheet" href="website1.css">
 </head>
 
-<body>
+<div class="box_main">
 
-  <a href="crossring.html">Cross Ring</a><br>
-  <a href="CrossRing2.html">Cross Ring2</a><br>
-  <a href="CrossRings3.html">Cross Ring3</a><br>
+  <div class="box01">
+    <div class="box02">
+      <div class="box03">
+        <div class="box04">
+          <div class="box05">
+            <div class="box06">
+
+                <a href="crossring.html">🤩</a>
+                <a href="CrossRing2.html">🥴</a>
+                <a href="CrossRings3.html">🧐</a>
+                <a href="flexbox.html">🥰<a/>
+                <a href="page5.html">😑<a/>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <body>
+
+  <h1 style="background-color:SlateBlue;" </h1>
+        <img src="<div style=" width:100%;height:0;padding-bottom:75%;position:relative;"><iframe src="https://giphy.com/embed/5WWud5bMud5C" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed"
+          allowFullScreen></iframe>
+        </div>
 
 
 
-</body>
+
+
+
+  </body>
