--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="CrossRings3.html">🧐</a>
                 <a href="flexbox.html">🥰<a/>
                 <a href="page5.html">😑<a/>
-                <a href="ScriptInterview.html">:)<a/>
+                <a href="page7.html">:D<a/>
 
             </div>
           </div>
